tests/data/bad/bad_clone.py
from ..good.good import cfg

cfg = cfg.clone()
